zokrates_cli/examples/compile_errors/mutability/assign_to_non_mutable.zok
def main():
    field a = 2
    a = 3
    return